--- a/Dargon.NBound.GameServer.Impl/Dargon.NBound.GameServer.Impl.csproj
+++ b/Dargon.NBound.GameServer.Impl/Dargon.NBound.GameServer.Impl.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{202B2115-795B-419B-9B62-6C61BF31DD9A}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{3EC5D573-5A82-40CB-BD8A-076F5EF35DC4}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dargon.NBound</RootNamespace>
-    <AssemblyName>game-server</AssemblyName>
+    <RootNamespace>Dargon.NBound.GameServer</RootNamespace>
+    <AssemblyName>Dargon.NBound.GameServer.Impl</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,17 +30,19 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dargon.PortableObjects">
+      <HintPath>..\packages\Dargon.PortableObjects.0.1.2\lib\net45\Dargon.PortableObjects.dll</HintPath>
+    </Reference>
     <Reference Include="ItzWarty.Commons">
       <HintPath>..\packages\ItzWarty.Commons.0.3.1\lib\portable-net45+netcore45+MonoAndroid1+MonoTouch1\ItzWarty.Commons.dll</HintPath>
+    </Reference>
+    <Reference Include="ItzWarty.Proxies.Api">
+      <HintPath>..\packages\ItzWarty.Proxies.Api.0.1.0\lib\net45\ItzWarty.Proxies.Api.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,37 +51,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MapStencilDisplay.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MapStencilDisplay.Designer.cs">
-      <DependentUpon>MapStencilDisplay.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="Gameplay\Events\EventManager.cs" />
+    <Compile Include="Gameplay\Events\GameEvent.cs" />
+    <Compile Include="Gameplay\Events\GameEventProcessor.cs" />
+    <Compile Include="Gameplay\Events\SpawnEvent.cs" />
+    <Compile Include="Gameplay\GameExceptions.cs" />
+    <Compile Include="Gameplay\GameState.cs" />
+    <Compile Include="Gameplay\GamePhaseManager.cs" />
+    <Compile Include="Gameplay\GamePhase.cs" />
+    <Compile Include="Gameplay\GameStateOperations.cs" />
+    <Compile Include="Maps\ManagableMap.cs" />
+    <Compile Include="Maps\MapStencil.cs" />
+    <Compile Include="Maps\MapStencilFactory.cs" />
+    <Compile Include="Maps\MapStencilOperationsImpl.cs" />
+    <Compile Include="Mobiles\Mobile.cs" />
+    <Compile Include="Mobiles\MobileComponent.cs" />
+    <Compile Include="Mobiles\MobileComponentType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="maps\map01.bmp">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="maps\map02.bmp">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="MapStencilDisplay.resx">
-      <DependentUpon>MapStencilDisplay.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Dargon.NBound.GameServer.Impl\Dargon.NBound.GameServer.Impl.csproj">
-      <Project>{3EC5D573-5A82-40CB-BD8A-076F5EF35DC4}</Project>
-      <Name>Dargon.NBound.GameServer.Impl</Name>
-    </ProjectReference>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
